--- a/style.css
+++ b/style.css
@@ -13,34 +13,40 @@
 /*nav*/
 nav {
   width: 80%;
-  margin: auto;
   display: flex;
+  flex-direction: row;
+  margin: 20px auto;
 }
 
 nav img {
-  margin-top: 15px;
-  float: left;
+  margin: 20px auto auto 0;
 }
 
 .menu {
-  margin: 15px 0 auto auto;
+  margin: 30px 0 auto auto;
   display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  padding: 0;
-  float: right;
 }
 
 .menu li {
-  margin: 20px;
-  display: inline-block;
-  justify-content: center;
-  align-items: center;
+  margin-left: 50px;
 }
 
 .menu_login a {
   color: #0065fc;
   font-weight: bold;
+}
+
+.menu_link:hover {
+  border-bottom: 1px solid #0065fc;
+}
+
+.menu_link a:hover {
+  color: #0065fc;
+}
+
+nav img {
+  margin-top: 15px;
+  float: left;
 }
 
 .menu_link a:hover {
@@ -461,7 +467,7 @@ figure {
 
 /*footer*/
 footer {
-  width: 80%;
+  width: 90%;
   height: 150px;
   background-color: #f2f2f2;
   align-items: center;
@@ -475,6 +481,7 @@ footer {
   flex-direction: row;
   width: 95%;
   margin: auto;
+  height: auto;
 }
 
 .footer_item {
@@ -489,6 +496,10 @@ footer {
     width: 80%;
   }
 
+  h1 {
+    width: 65%;
+  }
+
   /*search section*/
   .header_section {
     width: 80%;
@@ -497,6 +508,10 @@ footer {
   /*filters*/
   .filters {
     width: 80%;
+  }
+
+  .filters_title {
+    margin: auto 10px;
   }
 
   /*hostings*/
@@ -617,11 +632,12 @@ footer {
   }
 
   footer {
-    height: 300px;
+    height: 250px;
+    width: 80%;
   }
 
   .footer_items {
-    height: 250px;
+    height: 200px;
   }
 }
 
@@ -735,52 +751,65 @@ footer {
     border-radius: 15px 15px 0 0;
     height: 120px;
   }
+
+  footer {
+    width: 95%;
+    height: 250px;
+  }
 }
 
 /* small screens*/
 @media screen and (max-width: 576px) {
   /*nav*/
-  h1 {
-    font-size: 1.3em;
-  }
-  nav {
-    justify-content: space-between;
+  nav,
+  .navbar,
+  .navbar_link {
     display: flex;
-    flex-wrap: wrap;
   }
 
   nav img {
-    margin: 15px auto 10px 10px;
-  }
-
-  .menu_login a {
-    float: right;
+    position: absolute;
+    margin: 0 15px 0px 15px;
+    width: 110px;
+    height: 60px;
   }
 
   .menu {
-    flex-wrap: wrap-reverse;
-    float: none;
-    margin: 0 auto;
-    vertical-align: top;
-  }
-
-  .menu_responsive {
-    display: flex;
-    flex-direction: row;
-    text-align: center;
+    align-items: center;
+    margin-top: 75px;
+    padding: 0;
     width: 100%;
+    height: 30px;
   }
 
-  .menu li {
-    width: 150px;
-    margin: auto;
-    vertical-align: middle;
-    justify-content: center;
+  .menu_login {
+    position: absolute;
+    top: 50px;
+    right: 15px;
+  }
+
+  .menu_login a {
+    color: #0065fc;
+    font-weight: bold;
   }
 
   .menu_link {
-    width: 150px;
-    border-bottom: 1px #0065fc solid;
+    border-bottom: 2px solid #f2f2f2;
+    height: 30px;
+    width: 50%;
+  }
+
+  .menu_link :hover {
+    border-bottom: 1px solid #0065fc;
+  }
+
+  .menu_link a:hover {
+    color: #0065fc;
+  }
+
+  h1 {
+    font-size: 1.3em;
+    width: 85%;
   }
 
   /*header_section*/
@@ -806,13 +835,14 @@ footer {
   .filters {
     flex-direction: column;
     width: 100%;
+    text-align: left;
   }
 
   .filters_items a {
     margin-top: 10px;
   }
   .filters_title {
-    margin-left: 15px;
+    margin-left: 10px;
   }
 
   /*infos*/
@@ -937,19 +967,20 @@ footer {
 
   /*activities*/
   .activities {
-    width: 100%;
+    width: 90%;
     height: 1150px;
+    margin: auto;
   }
 
   .activities_figures {
     flex-direction: column;
-    width: 80%;
+    width: 310px;
     height: 1100px;
     margin: auto;
   }
 
   .activities_figures a {
-    margin: 5px auto 5px auto;
+    margin: auto auto 5px auto;
     height: fit-content;
     width: fit-content;
   }
@@ -972,7 +1003,7 @@ footer {
   }
 
   .activities_figures_cards a {
-    margin-bottom: 10px;
+    margin: auto 10px 10px auto;
     width: fit-content;
     height: fit-content;
   }
@@ -983,6 +1014,9 @@ footer {
     width: 310px;
   }
 
+  .activities_figures_card a {
+    margin: auto;
+  }
   .activities_figures_card img {
     height: 140px;
   }
