--- a/style.css
+++ b/style.css
@@ -36,12 +36,15 @@ nav img {
   font-weight: bold;
 }
 
-.menu_link:hover {
+.menu_link:hover,
+.menu_link a:hover {
+  color: #0065fc;
   border-bottom: 1px solid #0065fc;
 }
 
-.menu_link a:hover {
-  color: #0065fc;
+.menu_link,
+.menu_link a {
+  color: black;
 }
 
 nav img {
@@ -188,11 +191,14 @@ form input {
   border-radius: 90px;
   width: 40px;
   height: 40px;
+  display: table;
 }
 
 .filters_item_icon i {
   color: #0065fc;
-  margin: 10px;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
 }
 
 /*infos*/
